[gd_scene load_steps=11 format=3 uid="uid://d2s4isee3anlt"]

[ext_resource type="Script" path="res://script/deck.gd" id="1_j246j"]
[ext_resource type="PackedScene" uid="uid://bxvvafw0la2xt" path="res://scenes/Card.tscn" id="3_821us"]
[ext_resource type="Texture2D" uid="uid://dx1b82f5s3fbu" path="res://sprites/card_back.png" id="3_o7lt5"]
[ext_resource type="AudioStream" uid="uid://bm11te3kpqfkc" path="res://sound/card_flick.mp3" id="4_slgss"]

[sub_resource type="LabelSettings" id="LabelSettings_roxkf"]
font_size = 20

[sub_resource type="Animation" id="Animation_tytk3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Card:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_lypxp"]
resource_name = "add_to_hand"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Card:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-316, 400), Vector2(-316, 40), Vector2(-316, 400)]
}

[sub_resource type="Animation" id="Animation_5ap1y"]
resource_name = "add_to_hand2"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Card:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(336, 400), Vector2(336, 40), Vector2(336, 400)]
}

[sub_resource type="Animation" id="Animation_wxcgf"]
resource_name = "draw"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 400)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ihkjw"]
_data = {
"RESET": SubResource("Animation_tytk3"),
"add_to_hand": SubResource("Animation_lypxp"),
"add_to_hand2": SubResource("Animation_5ap1y"),
"draw": SubResource("Animation_wxcgf")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_j246j")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -52.0
offset_top = -105.0
offset_right = 50.0
offset_bottom = -77.0
text = "Draw Card"
label_settings = SubResource("LabelSettings_roxkf")

[node name="Card" parent="." instance=ExtResource("3_821us")]
card_value = "x 2"

[node name="AnimatedCard" type="Sprite2D" parent="."]
texture = ExtResource("3_o7lt5")

[node name="Button" type="Button" parent="."]
offset_left = -49.0
offset_top = -71.0
offset_right = 49.0
offset_bottom = 72.0
icon = ExtResource("3_o7lt5")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_slgss")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedCard")
libraries = {
"": SubResource("AnimationLibrary_ihkjw")
}

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
